tests/snapshots/sfc/js/patches__es6_shorthand_in_computed_style.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 219
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, normalizeStyle as _normalizeStyle } from "vue"

import { ref } from 'vue'

export default {
  __name: 'test',
  setup(__props) {

const width = ref(100)
const height = ref(50)

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", {
      style: _normalizeStyle({ width: width.value, height: height.value })
    }, "Styled", 4 /* STYLE */))
}
}

}
