tests/snapshots/sfc/js/patches__es6_shorthand_mixed_with_regular_properties.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 191
expression: js_output
---
import { openBlock as _openBlock, createBlock as _createBlock, resolveComponent as _resolveComponent } from "vue"

import { defineComponent as _defineComponent } from "vue";
import { ref } from "vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const name = ref("test");
    const __returned__ = {
      name,
      ref
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_Component = _resolveComponent("Component")
  
  return (_openBlock(), _createBlock(_component_Component, { options: { name: $setup.name, extra: 'value' } }, null, 8 /* PROPS */, ["options"]))
}

__sfc__.render = render
export default __sfc__
