tests/snapshots/sfc/js/patches__generic_function_call_should_be_stripped.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 191
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue"

import { defineComponent as _defineComponent } from "vue";
import { useStore } from "vuex";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const store = useStore();
    const __returned__ = {
      store,
      useStore
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_unref($setup.store).state.count), 1 /* TEXT */))
}

__sfc__.render = render
export default __sfc__
