tests/snapshots/sfc/js/patches__hyphenated_component_in_v_if_v_else_chain.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { openBlock as _openBlock, createBlock as _createBlock, createCommentVNode as _createCommentVNode, createTextVNode as _createTextVNode, resolveComponent as _resolveComponent, withCtx as _withCtx } from "vue"

import { ref } from 'vue'

export default {
  __name: 'test',
  setup(__props) {

const mode = ref('link')

return (_ctx, _cache) => {
  const _component_router_link = _resolveComponent("router-link")
  const _component_router_view = _resolveComponent("router-view")

  return (mode.value === 'link')
      ? (_openBlock(), _createBlock(_component_router_link, {
        key: 0,
        to: "/"
      }, {
        default: _withCtx(() => [
          _createTextVNode("Link")
        ]),
        _: 1 /* STABLE */
      }))
      : (_openBlock(), _createBlock(_component_router_view, { key: 1 }))
}
}

}
