tests/snapshots/sfc/js/patches__multiline_arrow_function_in_event_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 219
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'

export default {
  __name: 'test',
  setup(__props) {

const count = ref(0)

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("button", {
      onClick: _cache[0] || (_cache[0] = () => {
      const newValue = count.value + 1;
      count.value = _ctx.newValue;
      console.log('incremented');
    })
    }, "Increment"))
}
}

}
